fix top bar alignment

--- a/src/ui/App.css
+++ b/src/ui/App.css
@@ -28,4 +28,5 @@ body {
 
 .TopButton img {
   height: 80%;
+  vertical-align: super;
 }
